<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg6"
    tools:context=".About">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:touchscreenBlocksFocus="false">

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cvAbout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardBackgroundColor="#99000000"
                card_view:cardCornerRadius="5dp"
                card_view:cardUseCompatPadding="true"
                tools:layout_editor_absoluteX="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivAbout"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_above="@+id/tvAbout1"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/aboutme"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintHorizontal_bias="0.0"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvAbout1"
                        android:layout_width="361dp"
                        android:layout_height="71dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:ems="10"
                        android:gravity="center"
                        android:text="@string/about1"
                        android:textColor="#ffffff"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintHorizontal_bias="0.504"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toBottomOf="@+id/ivAbout" />

                    <TextView
                        android:id="@+id/tvAbout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:autoLink="email"
                        android:clickable="true"
                        android:ems="10"
                        android:focusable="true"
                        android:text="@string/about2"
                        android:textColor="#ffffff"
                        android:textSize="19sp"
                        card_view:layout_constraintTop_toBottomOf="@+id/tvAbout1"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="330dp" />

                    <TextView
                        android:id="@+id/tvAbout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:autoLink="email"
                        android:clickable="true"
                        android:ems="10"
                        android:focusable="true"
                        android:text="@string/about3"
                        android:textColor="#ffffff"
                        android:textSize="19sp"
                        card_view:layout_constraintTop_toBottomOf="@+id/tvAbout2"
                        tools:layout_editor_absoluteX="8dp" />

                    <TextView
                        android:id="@+id/tvAbout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/about4"
                        android:textColor="#ffffff"
                        android:textSize="19sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toBottomOf="@+id/tvAbout3"
                        card_view:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/tvAbout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/about5"
                        android:textColor="#ffffff"
                        android:textSize="19sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toBottomOf="@+id/tvAbout4"
                        card_view:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/tvAbout6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/about6"
                        android:textColor="#ffffff"
                        android:textSize="19sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toBottomOf="@+id/tvAbout5"
                        card_view:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>